--- a/src/libdata/package.json
+++ b/src/libdata/package.json
@@ -141,5 +141,9 @@
     "spec": [
       "**/specs/*.mjs"
     ]
+  },
+  "dependencies": {
+    "nanoid": "^3.1.16",
+    "stream-json": "^1.7.1"
   }
 }
