--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,13 @@ os: linux
 before_install:
   - curl -L https://raw.githubusercontent.com/pnpm/self-installer/master/install.js | PNPM_VERSION=5.11.1 node
   - pnpm config set store-dir ~/.pnpm-store
-  - pnpm --version
-  - docker pull redislabs/redisearch
-  - docker run -p 6379:6379 redislabs/redisearch:latest
+  # - pnpm --version
+  # - docker pull redislabs/redisearch
+  # - docker run -p 6379:6379 redislabs/redisearch:latest
+  - git clone --recursive https://github.com/RediSearch/RediSearch.git
+  - sudo make setup
+  - make build
+  - make run
 install:
   - pnpm --recursive install
 before_script:
