--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ before_install:
   # - pnpm --version
   # - docker pull redislabs/redisearch
   # - docker run -p 6379:6379 redislabs/redisearch:latest
+  - mkdir RediSearch && cd RediSearch
   - git clone --recursive https://github.com/RediSearch/RediSearch.git
-  - cd RediSearch && make setup && make build && make run
+  - make setup && make build && make run && cd ..
 install:
   - pnpm --recursive install
 before_script:
