--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,13 @@ os: linux
 before_install:
   - curl -L https://raw.githubusercontent.com/pnpm/self-installer/master/install.js | PNPM_VERSION=5.12.0 node
   - pnpm config set store-dir ~/.pnpm-store
-  # - pnpm --version
-  # - docker pull redislabs/redisearch
-  # - docker run -p 6379:6379 redislabs/redisearch:latest
-  - mkdir RediSearch && cd RediSearch
-  - git clone --recursive https://github.com/RediSearch/RediSearch.git
-  - cd RediSearch && sudo make setup && make build && make run && cd ../..
+  - mkdir rs && cd rs && git clone --recursive https://github.com/RediSearch/RediSearch.git . && git checkout v2.0.2 && make build && cd $TRAVIS_BUILD_DIR
+  - mkdir -p $TRAVIS_BUILD_DIR/redisearch
+  - sudo $TRAVIS_BUILD_DIR/rs/build/redisearch.so $TRAVIS_BUILD_DIR/redisearch
+  - ls -la $TRAVIS_BUILD_DIR/redisearch
+  - namei -l $TRAVIS_BUILD_DIR/rs/build/redisearch.so
+  - redis-cli MODULE LOAD $TRAVIS_BUILD_DIR/redisearch/redisearch.so
+  - sudo cat /var/log/redis/redis-server.log
 install:
   - pnpm --recursive install
 before_script:
