--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
-dist: bionic
+dist: focal
 addons:
   apt:
     update: true
+    packages:
+      - redis-server
 language: node_js
 node_js:
   - 15.2.1
 os: linux
 before_install:
-  - sudo apt-get update
-  - sudo apt-get -y install redis-server
+  # - sudo apt-get update
+  # - sudo apt-get -y install redis-server
+  # - sudo systemctl status redis
   - curl -L https://raw.githubusercontent.com/pnpm/self-installer/master/install.js | PNPM_VERSION=5.12.0 node
   - pnpm config set store-dir ~/.pnpm-store
   - mkdir rs && cd rs && git clone --recursive https://github.com/RediSearch/RediSearch.git . && git checkout v2.0.2 && make build && cd $TRAVIS_BUILD_DIR
