--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ after_success:
   - ls -la ./coverage-reports
   - ./cc-test-reporter sum-coverage ./coverage-reports/codeclimate.*.json --parts 3 --output ./coverage-reports/codeclimate.total.json
   - ./cc-test-reporter upload-coverage -i ./coverage-reports/codeclimate.total.json
-  - ./cc-test-reporter after-build --exit-code $?
+  - ./cc-test-reporter after-build --exit-code 0
 cache:
   npm: false
   directories:
